--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <title>付典的博客</title>
+    <title>付典</title>
     <meta name="keywords" content="博客">
     <meta name="description"
           content="博客">
