--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--
   [前言]
   现公布关于流浪计划的最新指示如下：
-  博客主站流浪计划，第一阶段开启。
+  demo主站流浪计划，第一阶段开启。
   工程师请逐渐连接母星。
   平台已经进入预定轨道，所有人员请离开休眠仓。
 -->
@@ -19,9 +19,9 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <title>付典</title>
-    <meta name="keywords" content="博客">
+    <meta name="keywords" content="demo">
     <meta name="description"
-          content="博客">
+          content="demo">
     <meta name="author" content="Pandaren">
     <meta name="format-detection" content="telephone=no">
 
@@ -164,18 +164,18 @@
     </div>
 
     <div class="message">
-        <h3>小博客：</h3>
+        <h3>小demo：</h3>
         <p>你好，世界。</p>
         <p>愿往后旅途，三冬暖，春不寒，天黑有灯，下雨有伞。此生尽兴，不负勇往。</p>
         <div class="sign">
-            <p>博客守卫者</p>
+            <p>demo守卫者</p>
             <p>2018年12月11日</p>
         </div>
     </div>
     <div class="letter">
         <h3></h3>
         <p><b></b></p>
-        <h3>博客守卫者：</h3>
+        <h3>demo守卫者：</h3>
         <p><b>付典：</b>......</p>
     </div>
     <div class="connect">
