--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </p>
     </div>
     <div class="tks">
-        <p>一蓑烟雨任平生，何妨吟啸且徐行。</p>
+        <p>希望我们总有善意可仰仗，总有善意愿释放。愿每个人都能笑对2023</p>
     </div>
 </div>
 <!-- 各位的爱与坚持，努力的人，你们辛苦了[鞠躬] -->
